k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: staging-lms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-pod
  template:
    metadata:
      labels:
        app: auth-pod
    spec:
      containers:
        - name: auth-container
          image: 494934332037.dkr.ecr.ap-south-1.amazonaws.com/anujjain-first-ecr-repo:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 3000
            
          resources:
            requests:
              memory: "160Mi" # (This is already 2x of required usage - if you try to reduce then scaledown won't work (think it) - staging)
              cpu: "10m"
            limits:
              memory: "320Mi" # 2x (because heavy at startup, low afterwards - staging)
              cpu: "100m" # 10x (because heavy at startup, low afterwards - staging)

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
